--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,inital-scale=1.">
-    <title>Document>/title>
+    <title>Pizza Party</title>
 </head>
 <body>
 
