Add unordered list

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!-- Make lists here -->
 <h5>This is how you make a pizza</h5>
-<p>There ar esome specific steps you need to take to make a pizza, we will list them here</p>
+<p>There are some specific steps you need to take to make a pizza, we will list them here</p>
 
 <ol>
     <li>make the pizza base</li>
@@ -31,6 +31,18 @@
     <li>serve</li>
 </ol>
 
+<h6>The toppings are different, they change for every occasion and taste. There is no order to toppings. So we will ist them like this.</h6>
+
+<ul>
+    <li>Pepperoni</li>
+    <li>Olives</li>
+    <li>Peppers (Never green)</li>
+    <li>Mushrooms</li>
+    <li>Onions</li>
+    <li>Jalapeños</li>
+    <li>Pineapple (Only if you are crazy)</li>
+    <li>Bacon</li>
+</ul>
 
 </body>
 </html>
