--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!-- Make lists here -->
 <h5>This is how you make a pizza</h5>
-<p>There are some specific steps you need to take to make a pizza, we will list them here</p>
+<p><small>There are some specific steps you need to take to make a pizza, we will list them here</small></p>
 
 <ol>
     <li>make the pizza base</li>
@@ -36,11 +36,11 @@
 <ul>
     <li>Pepperoni</li>
     <li>Olives</li>
-    <li>Peppers (Never green)</li>
+    <li>Peppers <strong>(Never green)</strong></li>
     <li>Mushrooms</li>
     <li>Onions</li>
     <li>Jalapeños</li>
-    <li>Pineapple (Only if you are crazy)</li>
+    <li>Pineapple <em>(Only if you are crazy)</em></li>
     <li>Bacon</li>
 </ul>
 
