--- a/index.html
+++ b/index.html
@@ -44,5 +44,7 @@
     <li>Bacon</li>
 </ul>
 
+<p>Here's the <a href="https://en.wikipedia.org/wiki/Pizza">Wikipedia article about pizza.</a></p>
+
 </body>
 </html>
