--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
 
 <p>Here's the <a href="https://en.wikipedia.org/wiki/Pizza" target="_blank">Wikipedia article about pizza.</a></p>
 
+<img src="images/pizza.jpg" alt="a picture of a pizza">
+
+
 </body>
 </html>
