--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,inital-scale=1.">
+    
+    <link rel="stylesheet" href="styles.css"/>
+    
     <title>Pizza Party</title>
 </head>
 <body>
