--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 <ul>
     <li>Pepperoni</li>
     <li>Olives</li>
-    <li>Peppers <strong>(Never green)</strong></li>
+    <li class="fave">Peppers <strong>(Never green)</strong></li>
     <li>Mushrooms</li>
     <li>Onions</li>
     <li>Jalapeños</li>
-    <li>Pineapple <em>(Only if you are crazy)</em></li>
+    <li class="fave">Pineapple <em>(Only if you are crazy)</em></li>
     <li>Bacon</li>
 </ul>
 
